# Larry_Case_Management_Streamlit

./: Dockerfile  app.py  config.yaml  hello.py  lawsuit.db  pyproject.toml  requirements.txt
.streamlit/: config.toml
backup/: backup.py
backup/backup_2024-12-28/: app.py
data/: 0_案件状态.xlsx  2_更新导入模版.xlsx  3_邮寄状态变更模版.xlsx  5_案件还款计划导入模版.xlsx  info.xlsx  status.xlsx  status_backup_20241019.xlsx  导入info-1.xlsx  导入info-2.xlsx  导入info-3.csv  导入info-3.xlsx  导入info-4.xlsx  导入info-5.xlsx  导入info.csv  导入info.xlsx  更新导入-v1.0.xlsx  更新导入-v1.1.xlsx
data/backup/: 导入info-11月.xlsx  显示info.xlsx  更新导入-stan-1205.xlsx  更新导入-v1.0.xlsx  更新导入.xlsx  更新导入模版-v1.2.xlsx
data/导入更新模板-20241230/: 1_首次导入模版.xlsx  2_更新导入模版.xlsx  3_邮寄状态变更模版.xlsx  5_案件还款计划导入模版.xlsx
data/需求更新_2024-12-23/: 开庭时间表导入模版-v1.0.xlsx  更新导入模版-v1.4.xlsx  案件管理系统变更需求.docx
data/需求更新_2024-12-24/: 更新导入模版-v1.4a.xlsx  案件状态.xlsx  案件管理系统变更需求(1).docx  案件还款计划导入模版-v1.0.xlsx  邮寄状态变更模版-v1.0.xlsx  (+1 more)
package/: database.py  utils.py
pages/: case_update.py  case_upload.py  main_page.py  user_management.py
updates/: 2024-12-08.md
views/: case_assignment.py  case_import.py  case_management.py  case_manual_update_manager.py  case_manual_update_print.py  case_manual_update_register.py  case_update.py  case_update_express.py  case_update_general.py  case_update_manager.py  case_update_manager_file.py  case_update_manager_manual.py  case_update_print.py  case_update_register.py  case_update_repayment.py  case_update_trial.py  case_upload.py  court_manual_update.py  dashboard.py  main.py  main_view.py  sidebar.py  user_management.py
(+20 files in other folders)
